--- a/.gitignore
+++ b/.gitignore
@@ -12,33 +12,53 @@
 .swiftpm/
 migrate_working_dir/
 
+# Build
+/build/
+**/build/
 
+# Flutter/Dart/Pub related
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/coverage/
+**/doc/api/
+**/ios/Flutter/.last_build_id
 
-#build 
-./build
-/build
+# Android related
+/android/app/debug
+/android/app/profile
+/android/app/release
+/android/.gradle/
+/android/local.properties
+/android/key.properties
+.gradle/
+/captures/
+/outputs/
 
+# iOS related
+/ios/Pods/
+/ios/.symlinks/
+/ios/Flutter/Flutter.framework
+/ios/Flutter/Flutter.podspec
+/ios/ServiceDefinitions.json
+/ios/Runner/GeneratedPluginRegistrant.*
 
-# IntelliJ related
+# Web related
+/lib/generated_plugin_registrant.dart
+
+# VS Code & IntelliJ
+.idea/
 *.iml
 *.ipr
 *.iws
-.idea/
+.vscode/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-/coverage/
+# MacOS & Linux related
+/macos/Flutter/ephemeral/
+/linux/flutter/ephemeral/
 
 # Symbolication related
 app.*.symbols
@@ -46,7 +66,18 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+
+# Firebase or secret keys (optional but recommended)
+*.keystore
+*.pem
+*.p12
+*.jks
+google-services.json
+GoogleService-Info.plist
+.env
+.env.*
